--- a/index.html
+++ b/index.html
@@ -3,8 +3,65 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" href="css/css.css" />
 	</head>
 	<body>
-		<h1>hello</h1>
+		<nav >
+			<ul class="clearfix">
+				<li>
+					<a href="javascript:;void(0)"><img src="img/lc.png"/></a>
+				</li>
+				<li>
+					<a href="javascript:;void(0)"><img src="img/hd.png"/></a>
+				</li>
+				<li>
+					<a href="javascript:;void(0)"><img src="img/ln.png"/></a>
+				</li>
+				<li>
+					<a href="javascript:;void(0)"><img src="img/cm.png"/></a>
+				</li>
+				<li>
+					<a href="javascript:;void(0)"><img src="img/sn.png"/></a>
+				</li>
+			</ul>
+		</nav>
+		<div class="w1100">
+			<div class="active">
+				<ul class="clearfix">
+					<li><a href="javascript:;void(0)"><img src="img/sn.png"/></a></li>
+					<li><a href="javascript:;void(0)"><img src="img/cm.png"/></a></li>
+					<li><a href="javascript:;void(0)"><img src="img/ln.png"/></a></li>
+				</ul>
+			</div>
+			
+			<div class="active2">
+				<ul class="clearfix">
+					<li><a href="javascript:;void(0)"></a></li>
+					<li><a href="javascript:;void(0)"><img src="img/cm.png"/></a></li>
+					<li><a href="javascript:;void(0)"><img src="img/ln.png"/></a></li>
+					<li><a href="javascript:;void(0)"></a></li>
+				</ul>
+			</div>
+			
+			<div class="active3">
+				<ul class="clearfix">
+					<li>
+						<a href="javascript:;void(0)"><img src="img/cm.png"/></a>
+						
+					</li>
+					<li><a href="javascript:;void(0)"></a></li>
+					<li><a href="javascript:;void(0)"><img src="img/ln.png"/></a></li>
+				</ul>
+			</div>
+			
+		</div>
+		<footer>
+				
+		</footer>
+		
+		<script type="text/javascript" src="js/anictr.js"></script>
+		<script type="text/javascript">
+			
+		</script>
 	</body>
 </html>
