--- a/index.html
+++ b/index.html
@@ -5,35 +5,27 @@
 		<title>lpitao</title>
 		<link rel="stylesheet" href="css/css.css" />
 	</head>
-	<body>
+	<body class="index">
 		<nav>
 			<ul class="clearfix">
 				<li>
-					<a href="page/ccc.html" target="_blank"><img src="img/lc.png"/></a>
+					<a href="page/ccc.html" target="_blank"></a>
 				</li>
 				<li>
-					<a href="javascript:;void(0)"><img src="img/hd.png"/></a>
+					<a href="javascript:;void(0)" target="_blank"></a>
 				</li>
 				<li>
-					<a href="javascript:;void(0)"><img src="img/ln.png"/></a>
+					<a href="javascript:;void(0)" target="_blank"></a>
 				</li>
 				<li>
-					<a href="javascript:;void(0)"><img src="img/cm.png"/></a>
+					<a href="javascript:;void(0)" target="_blank"></a>
 				</li>
 				<li>
-					<a href="javascript:;void(0)"><img src="img/sn.png"/></a>
+					<a href="javascript:;void(0)" target="_blank"></a>
 				</li>
 			</ul>
 		</nav>
 		<div class="w1100">
-			<div class="active">
-				<ul class="clearfix">
-					<li><a href="javascript:;void(0)"><img src="img/sn.png"/></a></li>
-					<li><a href="javascript:;void(0)"><img src="img/cm.png"/></a></li>
-					<li><a href="javascript:;void(0)"><img src="img/ln.png"/></a></li>
-				</ul>
-			</div>
-			
 			<div class="active2">
 				<ul class="clearfix">
 					<li><a href="javascript:;void(0)"></a></li>
