--- a/text/js/1.html
+++ b/text/js/1.html
@@ -2,13 +2,16 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>1</title>
-		<link rel="stylesheet" href="../css/css.css"  />
+		<title>Js</title>
+		<link rel="stylesheet" href="../../css/css.css" />
 	</head>
 	<body>
 		<div class="w900" style="background: rgba(255,255,255,.5);">
 			<div class="content">
-				ldslfsk;
+				<h1>JS</h1>
+				<p>
+
+				</p>
 			</div>
 		</div>
 	</body>
