--- a/text/ccc/1.html
+++ b/text/ccc/1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>1</title>
-		<link rel="stylesheet" href="../css/css.css"  />
+		<link rel="stylesheet" href="../../css/css.css"  />
 	</head>
 	<body>
 		<ul class="bg-bubbles">
