--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</ul>
 			</div>
 			
-			<div class="active3">
+			<!--<div class="active3">
 				<ul class="clearfix">
 					<li>
 						<div class="card1">
@@ -60,7 +60,7 @@
 					</li>
 				</ul>
 			</div>
-			
+			-->
 		</div>
 		<!--<div class="bg_alert">-->
 		<div class="alert1" id="alert1"></div>
